# CrossRoads-IJE

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  game  gcc_install.sh  install.sh  princerescue  runTest.sh  sample_text.conf  travis.yml
cross-roads-deb/DEBIAN/: control  launcher
engine/: Makefile  cmake_install.cmake
engine/include/: Keyboard.hpp  LTexture.h  Logger.hpp  Music.hpp  Sound.hpp  Sprite.h  Timer.hpp  collision_manager.hpp  game.hpp  gameobject.hpp  logger.h  logger.hpp  mouse.hpp  scene.hpp  sdl2core.hpp
engine/include/components/: Music.hpp  Sound.hpp  animation.hpp  animation_controller.hpp  audio.hpp  component.hpp  image.hpp  music.hpp
engine/src/: Keyboard.cpp  LTexture.cpp  Logger.cpp  Music.cpp  Sound.cpp  Sprite.cpp  Timer.cpp  collision_manager.cpp  game.cpp  gameobject.cpp  logger.cpp  mouse.cpp  scene.cpp
engine/src/components/: Music.cpp  Sound.cpp  animation.cpp  animation_controller.cpp  audio.cpp  image.cpp  music.cpp
include/: bossAI.hpp  button.hpp  cameraposition.hpp  fireball.hpp  heart.hpp  initialStory.hpp  menu_scene.hpp  monsterAI.hpp  plataform.hpp  player.hpp  portal.hpp  restart.hpp  stage1_scene.hpp
src/: Sprite.cpp  bossAI.cpp  button.cpp  cameraposition.cpp  fireball.cpp  heart.cpp  initialStory.cpp  main.cpp  menu_scene.cpp  monsterAI.cpp  plataform.cpp  player.cpp  portal.cpp  restart.cpp  stage1_scene.cpp
